fix: vertically align on/off air control label and switch

--- a/client/styles/stream-controls.css
+++ b/client/styles/stream-controls.css
@@ -5,5 +5,8 @@
 	padding: 0 var(--standard-gap);
 }
 
+/* TODO: this should be a part of the actual slider component */
 .stream-control {
+	display: flex;
+	align-items: center;
 }
